index.html: add google accounts meta tag

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
-	<head><title>Harrison Shoebridge</title></head>
+	<head>
+		<title>Harrison Shoebridge</title>
+
+		
+		<!-- Google meta tag -->
+		<meta name="google-site-verification" content="8iD0i_5XYXY1FJX-qcMpIh2JFFBG27dzk8FZBubJ_80" />
+	</head>
 
 	<body>
 		<p>Hey i'm harrison</p>
