--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 	<head>
 		<title>Harrison Shoebridge</title>
 
-		
 		<!-- Google meta tag -->
 		<meta name="google-site-verification" content="8iD0i_5XYXY1FJX-qcMpIh2JFFBG27dzk8FZBubJ_80" />
+
+		<link rel="stylesheet" type="text/css" href="lib/skeleton/css/normalize.css">
+		<link rel="stylesheet" type="text/css" href="lib/skeleton/css/skeleton.css">
+		<link rel="stylesheet" type="text/css" href="style/main.css">
 	</head>
 
 	<body>
-		<p>Hey i'm harrison</p>
+		<header>
+			<div class="container"> 
+				<div class="row">
+					<div class="three columns">
+						<h3>Harrison</h3>
+					</div>
+
+					<div class="nine columns">
+						<nav class="u-pull-right">
+							<ul>
+								<li><a href="#">About</a></li>
+								<li><a href="#">Code</a></li>
+								<li><a href="#">Experience</a></li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</div>
+		</header>
 	</body>
 </html>
