index.html: add my name and some basic text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="container"> 
 				<div class="row">
 					<div class="three columns">
-						<h3>Harrison</h3>
+						<h1>Harrison</h1>
 					</div>
 
 					<div class="nine columns">
@@ -30,5 +30,13 @@
 				</div>
 			</div>
 		</header>
+		
+		<div class="container">
+
+			<section>
+				<h3>Who am I?</h3>
+				<!-- hint: not Jean Valjean -->
+			</section>
+		</div>
 	</body>
 </html>
