index.html, style/main.css: add seperation lines, change names around

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 					<div class="one-third column project">
 						<div class="title">
-							<h4>Hacked Stuff</h4>
+							<h4>Flash Projects</h4>
 						</div>
 
 						<div class="capture">
