--- a/projects/engi.html
+++ b/projects/engi.html
@@ -15,7 +15,7 @@
 			<div class="container"> 
 				<div class="row">
 					<div class="six columns">
-						<h1>Harrison Shoebridge</h1>
+						<h1><a href="/">Harrison Shoebridge</a></h1>
 						<h3>Engi</h3>
 					</div>
 
