index, projects/engi: doing a bit of writing

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						</a>
 
 						<div class="summary">
-							<p>Want to find the best repository in X field? Well you know who to call... Ghost busters!</p>
+							<p>A project to help developers find and compare projects to depend on or contribute to.</p>
 						</div>
 					</div>
 				</div>
