--- a/projects/engi.html
+++ b/projects/engi.html
@@ -44,7 +44,9 @@
 				</div>
 
 				<div class="eight columns">
-					<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>	
+					<p>Engi is a game engine, written in Go following the Entity Component System (ECS) paradigm. It cross compiles to Linux, Mac OSX, Windows and the web. The ECS design pattern is known from engines like Source and Unity.</p>
+
+					<p>Originally, Engi was a fork of <a href="https://github.com/ajhager/engi">github.com/ajhager/engi</a>. Ajhager had made leaps and bounds from a rendering perspective for a Go game engine. Unfortunately the library was becoming stagnant and not heading in a direction I liked. I'm maintaining a fork of it which is aimed at making it more of a game engine than a multimedia library.</p>
 				</div>
 			</div>
 		</div>
