--- a/projects/engi.html
+++ b/projects/engi.html
@@ -22,7 +22,7 @@
 					<div class="five columns">
 						<nav class="u-pull-right`">
 							<ul>
-								<li><a href="/">About</a></li>
+								<li><a href="/me.html">Me</a></li>
 								<li><a href="#">Code</a></li>
 								<li><a href="#">Experience</a></li>
 							</ul>
