me: add standin profile picture

--- a/me.html
+++ b/me.html
@@ -33,8 +33,12 @@
 		</header>
 		
 		<div class="container">
-			<div class="row"> 
-				<div class="twelve columns break">
+			<div class="row break">
+				<div class="four columns">
+					<img id="me_photo" class="u-max-full-width "src="/imgs/sad__.png" alt="A placeholder pixel art image of me">	
+				</div>
+
+				<div class="eight columns">
 					<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
 				</div>
 			</div>
