me: use an unordered list to show experience

--- a/me.html
+++ b/me.html
@@ -45,19 +45,27 @@
 
 			<div class="row">
 				<div class="six columns">
-				<h3 class="">Experience</h3>
-				<section>
-					<h4>biNu</h4>
-					<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
-				</section>
+					<h3 class="">Experience</h3>
+					<ul class="descriptions">
+						<li>
+							<section>
+								<h4>biNu</h4>
+								<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
+							</section>
+						</li>
+					</ul>
 				</div>
 				
 				<div class="six columns">
-				<h3>Tools and Languages</h3>
-				<section>
-					<h4>Go</h4>
-					<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
-				</section>
+					<h3>Tools and Languages</h3>
+					<ul class="descriptions">
+						<li>
+							<section>
+								<h4>Go</h4>
+								<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
+							</section>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
