index, me: beginning to fill out information

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						</div>
 
 						<div class="summary">
-							<p>On this project I did bla bla and bla</p>
+							<p>A game written in ActionScript3, depicting the an everyday person on his journey to collect a prize mysteriously allocated to him by "Society Inc.". I wrote all the code, and pixeled all the in-game graphics.</p>
 						</div>
 					</div>
 
@@ -123,7 +123,7 @@
 						</div>
 
 						<div class="summary">
-							<p>On this project I did bla bla and bla</p>
+							<p>These are a selection of projects I did over a short period of time.</p>
 						</div>
 					</div>
 				</div>
