--- a/me.html
+++ b/me.html
@@ -53,6 +53,13 @@
 								<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
 							</section>
 						</li>
+
+						<li>
+							<section>
+								<h4>Torque Data</h4>
+								<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
+							</section>
+						</li>
 					</ul>
 				</div>
 				
@@ -62,6 +69,20 @@
 						<li>
 							<section>
 								<h4>Go</h4>
+								<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
+							</section>
+						</li>
+
+						<li>
+							<section>
+								<h4>Python</h4>
+								<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
+							</section>
+						</li>
+
+						<li>
+							<section>
+								<h4>JavaScript</h4>
 								<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
 							</section>
 						</li>
