projects/trivia: add description of my work on quizzi

--- a/projects/trivia.html
+++ b/projects/trivia.html
@@ -33,18 +33,13 @@
 		</header>
 		<div class="container">
 			<div class="row">
-				<div class="twelve columns">
-					<!-- <h3>Engi</h3> -->
-				</div>
-			</div>
-			<div class="row">
 				<div class="four columns">
 					<div class="big-capture capture">
 					</div>	
 				</div>
 
 				<div class="eight columns">
-					<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>	
+					<p>While at <a href="http://ncss.edu.au">NCSS 2015</a> I worked with my team, group 4 to build a Trivia website named quizzi. Users on the website could participate in trivia games and add questions for other users to complete. Personally I, along with one other student built the Object Relational Mapping (ORM) system. The ORM is used to abstract the database into a set of models which can be used by the other people in our group. Towards the end of the project I became responsible for developing the actual "Game" system that allowed users to complete matches and be assigned scores.</p>
 				</div>
 			</div>
 		</div>
