me: add descriptions of my tools and languages + experiences.

--- a/me.html
+++ b/me.html
@@ -57,14 +57,14 @@
 						<li>
 							<section>
 								<h4>Torque Data</h4>
-								<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
+								<p>For year 10 work experience I worked at Torque Data doing Application Development.</p>
 							</section>
 						</li>
 
 						<li>
 							<section>
 								<h4>NCSS 2015</h4>
-								<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
+								<p>I attended NCSS, a 10 day residential camp held at the University of Sydney and took part in the web development stream, learning advanced Python and Computer Science. Doing this I was was able to refine my Regex skills, learn about State Machines. I also attended classes on database design and integration in Python.</p>
 							</section>
 						</li>
 					</ul>
@@ -76,14 +76,14 @@
 						<li>
 							<section>
 								<h4>Go</h4>
-								<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
+								<p>I began learning Go in mid 2014, and since it has become my goto language for everything. Using Go I have developed IRC Bots, Websites (Using REST APIs or templating), Games, Game Engines, a tiny ORM, and a Markdown Parser among other things.</p>
 							</section>
 						</li>
 
 						<li>
 							<section>
 								<h4>Python</h4>
-								<p>Neque porro quisquam est qui dolorem ipsum quia dolor. Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor... Neque porro quisquam est qui dolorem ipsum quia dolor...</p>
+								<p>I first learnt Python in 2012, it became the first language I was ever productive in. Over the 2015 summer holidays I revived my Python skills by attending NCSS and using it for contributing to several smaller projects for the <a href="http://watchpeoplecode.com">WatchPeopleCode</a> community.</p>
 							</section>
 						</li>
 
