index, me: add meta description tags
Lets see if google will give the site a nice description...

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 		<!-- Google meta tag -->
 		<meta name="google-site-verification" content="8iD0i_5XYXY1FJX-qcMpIh2JFFBG27dzk8FZBubJ_80" />
+		<meta name="description" content="Welcome to the personal website of Harrison Shoebridge!">
 
 		<link rel="stylesheet" type="text/css" href="lib/skeleton/css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="lib/skeleton/css/skeleton.css">
