--- a/me.html
+++ b/me.html
@@ -4,7 +4,7 @@
 
 		<!-- Google meta tag -->
 		<meta name="google-site-verification" content="8iD0i_5XYXY1FJX-qcMpIh2JFFBG27dzk8FZBubJ_80" />
-
+		<meta name="description" content="Heres a page containing a bit about Harrison!">
 		<link rel="stylesheet" type="text/css" href="lib/skeleton/css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="lib/skeleton/css/skeleton.css">
 		<link rel="stylesheet" type="text/css" href="style/main.css">
